--- a/lab3/app/src/main/res/layout/activity_download.xml
+++ b/lab3/app/src/main/res/layout/activity_download.xml
@@ -34,5 +34,12 @@
             android:inputType="textPersonName"
             android:text="URL" />
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="downloadImage"
+            android:text="download" />
+
     </LinearLayout>
 </LinearLayout>
