--- a/lab3/app/src/main/res/layout/activity_download.xml
+++ b/lab3/app/src/main/res/layout/activity_download.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/title"
+            android:id="@+id/gettitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -23,7 +23,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            app:srcCompat="@color/colorPrimary" />
+            app:srcCompat="@drawable/ic_launcher_background" />
 
         <EditText
             android:id="@+id/geturl"
