--- a/lab3/app/src/main/res/layout/activity_download.xml
+++ b/lab3/app/src/main/res/layout/activity_download.xml
@@ -16,8 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Image Title" />
+            android:hint="Image Title"
+            android:inputType="textPersonName" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -31,8 +31,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Enter the URL"
-            android:inputType="textPersonName"
-            android:text="URL" />
+            android:inputType="textPersonName" />
 
         <Button
             android:id="@+id/button"
